@@ -1,4 +1,6 @@
-<div class="center" id="jstree_demo_div"><ul class="jstree-open"><li class="jstree-open">
+<div class="center" id="jstree_demo_div"><ul class="jstree-open">
+<li><span>&lt;?xml version="1.0" encoding="UTF-8"?&gt;</span></li>
+<li class="jstree-open">
 <a href="#" onclick="return sync2here(1, 1,  1, 1)">&lt;root<span>&gt;</span></a><ul>
 <li class="jstree-open">
 <a href="#" onclick="return sync2here(1, 2,  1, 2)">&lt;node1<span>&gt;</span></a><ul>
@@ -14,4 +16,5 @@
 </li>
 <li class="jstree-open"><span>&lt;/root&gt;</span></li>
 </ul>
-</li></ul></div>
+</li>
+</ul></div>
