@@ -1,4 +1,6 @@
-<div class="center" id="jstree_demo_div"><ul class="jstree-open"><li class="jstree-open">
+<div class="center" id="jstree_demo_div"><ul class="jstree-open">
+<li><span>&lt;?xml version="1.0" encoding="UTF-8"?&gt;</span></li>
+<li class="jstree-open">
 <a href="#" onclick="return sync2here(1, 1,  1, 1)">&lt;section<span class="left"> title=""SMI Security for Cryptographic Algorithms" Registry"</span><span class="right"> numbered="true"</span><span class="right"> toc="default"</span><span>&gt;</span></a><ul>
 <li class="jstree-open">
 <a href="#" onclick="return sync2here(-1, 0, 1, 2)"><span class="right">&lt;name</span><span class="right">&gt;</span></a><ul>
@@ -337,4 +339,5 @@
 </li>
 <li class="jstree-open"><span>&lt;/section&gt;</span></li>
 </ul>
-</li></ul></div>
+</li>
+</ul></div>
