@@ -1,6 +1,7 @@
 xmldiff (0.5.0) distribution(s); urgency=low
 
 	* Tag artwork and sourcecode correctly so that they are formatted as space preserving.
+	* Emit the xml declaration and DOCTYPE declaration
 
 -- Jim Schaad <ietf@augustcellars.com>  Sun XX Feb 2018 19:00:00 -0800
 
